--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport"
-    content="width=device-width, initial-scale=0.9, maximum-scale=3.0, minimum-scale=0.86 user-scalable=no" />
+    content="width=device-width, initial-scale=0.9, maximum-scale=1.0, minimum-scale=0.9 user-scalable=0" />
   <meta name="theme-color" content="#000000" />
   <meta name="Netflix Clone" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
